<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_white_24dp"
            android:title="@string/nav_item_events" />
        <item
            android:id="@+id/nav_guns"
            android:icon="@drawable/ic_gun_white_24dp"
            android:title="@string/nav_item_guns" />

        <item
            android:id="@+id/nav_instructors"
            android:icon="@drawable/ic_instructor_white_24dp"
            android:title="@string/nav_item_instructors" />

        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_edit_white_24dp"
            android:title="@string/nav_item_edit_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_item_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_policy_white_24dp"
                android:title="@string/nav_policy" />
        </menu>
    </item>

</menu>
