<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.politechnika.shootingrange.fragments.EventDetailsFragment">

    <!-- Description -->
    <TextView
        android:id="@+id/field_details_event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:text="@string/default_item_event_description"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_date_layout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/field_details_event_description"
        android:orientation="horizontal">

        <!-- Date -->
        <TextView
            android:id="@+id/field_details_event_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_details_event_text"
            android:textSize="13sp" />

        <!-- Date -->
        <TextView
            android:id="@+id/field_details_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_item_event_date"
            android:layout_marginStart="5dp"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_main_referee_layout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/details_date_layout"
        android:orientation="horizontal">

        <!-- Date -->
        <TextView
            android:id="@+id/field_details_main_referee_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_details_main_referee_text"
            android:textSize="13sp" />

        <!-- Date -->
        <TextView
            android:id="@+id/field_details_main_referee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_details_main_referee"
            android:layout_marginStart="5dp"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_type_of_competition_layout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/details_main_referee_layout"
        android:orientation="horizontal">

        <!-- Date -->
        <TextView
            android:id="@+id/field_details_type_of_competition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_details_type_of_competition_text"
            android:textSize="13sp" />

        <!-- Date -->
        <TextView
            android:id="@+id/field_details_type_of_competition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_details_type_of_competition"
            android:layout_marginStart="5dp"
            android:textSize="13sp" />
    </LinearLayout>
</RelativeLayout>